# hrf-universe-home-task

./: pyproject.toml  run-stats.sh
home_task/: api.py  main.py  models.py
home_task/scripts/: calculate_days_to_hire.py
migrations/versions/: bd5356be7d29_add_days_to_hire_table.py
